remove link from other-news images

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 		</div>
 		<div class="advertisements">
 			<ul>
-				<li><a href="https://www.youtube.com/watch?v=iyi67AJhB74"><img src="images/ads/mrplow.png" alt=""></a></li>
+				<li><a href="https://www.youtube.com/watch?v=iyi67AJhB74"><img src="images/other/diy.png" alt=""></a></li>
 				<li><a href="https://www.youtube.com/watch?v=DOKxQahXM9I"><img src="images/ads/moes.png" alt=""></a></li>
 			</ul>
 		</div>	
@@ -288,39 +288,61 @@
 		<div class="other-news">
 			<ul>
 				<li>
-					<a href="#"><img src="images/other/investigation.png" alt="">
-						<span class="category other-news-category investigation">INVESTIGATION</span>
-					</a>
+					<img src="images/other/investigation.png" alt="">
+					<span class="category other-news-category investigation">INVESTIGATION</span>
 					<ul class="other-news-left-col">
-						<li><a href="https://www.youtube.com/watch?v=HNLC-b8zWEk">Live: Homer Lie Detector Test</a></li>
-						<li><a href="https://www.youtube.com/watch?v=iQGwrK_yDEg">Live: Moe Lie Detector Test</a></li>
-						<li><a href="https://www.youtube.com/watch?v=pnD_51Vvi1I">Police Chief Displays Lack of Leadership</a></li>
-						<li><a href="https://www.youtube.com/watch?v=HXCaWdQjNWM">Who Shot Mr.Burns Solved After Length Investigation</a></li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=HNLC-b8zWEk">Live: Homer Lie Detector Test</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=iQGwrK_yDEg">Live: Moe Lie Detector Test</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=pnD_51Vvi1I">Police Chief Displays Lack of Leadership</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=HXCaWdQjNWM">Who Shot Mr.Burns Solved After Length Investigation</a>
+						</li>
 					</ul>
 				</li>
 				<li>
-					<a href="#"><img src="images/other/destination.png" alt="">
-						<span class="category other-news-category destination">DESTINATION</span>
-					</a>
+					<img src="images/other/destination.png" alt="">
+					<span class="category other-news-category destination">DESTINATION</span>
 					<ul class="other-news-left-col">
-						<li><a href="https://www.youtube.com/watch?v=UatzGsaWxFY">1 Day Visit Guidebook in New York City</a></li>
-						<li><a href="https://www.youtube.com/watch?v=wg1juWJl_9c">Toronto Must See Attractions</a></li>
-						<li><a href="https://www.youtube.com/watch?v=7DOIJn5Xq8U">Learn How To Drive Like The Locals While In England</a></li>
-						<li><a href="https://www.youtube.com/watch?v=BPLrNWAsBWU">Find The Perfect Accomodation in Japan</a></li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=UatzGsaWxFY">1 Day Visit Guidebook in New York City</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=wg1juWJl_9c">Toronto Must See Attractions</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=7DOIJn5Xq8U">Learn How To Drive Like The Locals While In England</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=BPLrNWAsBWU">Find The Perfect Accomodation in Japan</a>
+						</li>
 					</ul>
 				</li>
 			</ul>
 			<hr>
 			<ul>
 				<li>
-					<a href="#"><img src="images/other/sports.png" alt="">
-						<span class="category other-news-category-bottom sports">SPORTS</span>
-					</a>
+					<img src="images/other/sports.png" alt="">
+					<span class="category other-news-category-bottom sports">SPORTS</span>
+					
 					<ul class="other-news-left-col">
-						<li><a href="https://www.youtube.com/watch?v=S70dzMyHoLM">YMCA Opens Up New Location</a></li>
-						<li><a href="https://www.youtube.com/watch?v=Xd0CIlDsk6k">Live Update: Homer Trains For Big Upcoming Fight</a></li>
-						<li><a href="https://www.youtube.com/watch?v=ZJ350-uShSE">Get Ripped and Toned With Only Two Months Of Training</a></li>
-						<li><a href="https://www.youtube.com/watch?v=7XDzA_TTcMA">Learn How To Master The Perfect Golf Swing</a></li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=S70dzMyHoLM">YMCA Opens Up New Location</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=Xd0CIlDsk6k">Live Update: Homer Trains For Big Upcoming Fight</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=ZJ350-uShSE">Get Ripped and Toned With Only Two Months Of Training</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=7XDzA_TTcMA">Learn How To Master The Perfect Golf Swing</a>
+						</li>
 					</ul>
 				</li>
 				<li>
@@ -328,10 +350,18 @@
 						<span class="category other-news-category diy">DIY</span>
 					</a>
 					<ul class="other-news-left-col">
-						<li><a href="https://www.youtube.com/watch?v=A4FjJ9tH5HY">How To Easily Build A BBQ Pit In 3 Easy Steps</a></li>
-						<li><a href="https://www.youtube.com/watch?v=gHjhP07HyAs">All You Need For A Perfect BBQ Feast</a></li>
-						<li><a href="https://www.youtube.com/watch?v=6_VyJdT6eaE">DIY: How To Brew Your Own Beer From Home</a></li>
-						<li><a href="https://www.youtube.com/watch?v=KSKBRWoGvL0">How To Start Your Own Successful Home Business</a></li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=A4FjJ9tH5HY">How To Easily Build A BBQ Pit In 3 Easy Steps</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=gHjhP07HyAs">All You Need For A Perfect BBQ Feast</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=6_VyJdT6eaE">DIY: How To Brew Your Own Beer From Home</a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/watch?v=KSKBRWoGvL0">How To Start Your Own Successful Home Business</a>
+						</li>
 					</ul>
 				</li>
 			</ul>		</div>
