--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
 		</div>
 		<div class="advertisements">
 			<ul>
-				<li><a href="https://www.youtube.com/watch?v=iyi67AJhB74"><img src="images/ads/mrplow.png" alt=""></a></li>
-				<li><a href="https://www.youtube.com/watch?v=DOKxQahXM9I"><img src="images/ads/moes.png" alt=""></a></li>
+				<li><a href="https://www.youtube.com/watch?v=iyi67AJhB74"><img src="images/ads/mrplow.jpg" alt=""></a></li>
+				<li><a href="https://www.youtube.com/watch?v=DOKxQahXM9I"><img src="images/ads/moes.jpg" alt=""></a></li>
 			</ul>
 		</div>	
 	</div>
