testing ads images

--- a/index.html
+++ b/index.html
@@ -278,10 +278,8 @@
 			<h4>Advertisement</h4>				
 		</div>
 		<div class="advertisements">
-			<ul>
-				<li><a href="https://www.youtube.com/watch?v=iyi67AJhB74"><img src="images/ads/mrplow.jpg" alt=""></a></li>
-				<li><a href="https://www.youtube.com/watch?v=DOKxQahXM9I"><img src="images/ads/moes.jpg" alt=""></a></li>
-			</ul>
+			<img src="images/ads/mrplow.png" alt="">
+			
 		</div>	
 	</div>
 	<section class="section-other-news">
