testing ads images

--- a/index.html
+++ b/index.html
@@ -278,8 +278,10 @@
 			<h4>Advertisement</h4>				
 		</div>
 		<div class="advertisements">
-			<img src="images/ads/mrplow.png" alt="">
-			
+			<ul>
+				<li><a href="https://www.youtube.com/watch?v=iyi67AJhB74"><img src="images/other/diy.jpg" alt=""></a></li>
+				<li><a href="https://www.youtube.com/watch?v=DOKxQahXM9I"><img src="images/other/investigation.jpg" alt=""></a></li>
+			</ul>
 		</div>	
 	</div>
 	<section class="section-other-news">
