--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 							<a href="https://www.youtube.com/watch?v=UatzGsaWxFY">1 Day Visit Guidebook in New York City</a>
 						</li>
 						<li>
-							<a href="https://www.youtube.com/watch?v=wg1juWJl_9c">Toronto Must See Attractions</a>
+							<a href="https://www.youtube.com/watch?v=WsscaEd3TlE">Best Tips How To Safely Travel In Rio De Janeiro </a>
 						</li>
 						<li>
 							<a href="https://www.youtube.com/watch?v=7DOIJn5Xq8U">Learn How To Drive Like The Locals While In England</a>
