--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<script>
+	var host = "YOURDOMAIN.github.io";
+	if ((host == window.location.host) && (window.location.protocol != "https:"))
+	    window.location.protocol = "https";
+	</script>
 	<header>
 
 			<div class="header-col">
