--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<script>
-	var host = "YOURDOMAIN.github.io";
+	var host = "http://rickywid.github.io/springfield-today";
 	if ((host == window.location.host) && (window.location.protocol != "https:"))
 	    window.location.protocol = "https";
 	</script>
