--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<script>
+var host = "rickywid.github.io";
+if ((host == window.location.host) && (window.location.protocol != "https:"))
+    window.location.protocol = "https";
+	
+</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
